# Polymarket-Kalshi-Arbitrage-bot

./: .gitignore  ARCHITECTURE_MULTI_STRATEGY.md  Cargo.toml  DUAL_FEED_CHANGES.md  QUICK_REFERENCE.md  config.json
src/: binance_ws.rs  config.rs  discovery.rs  lib.rs  main.rs  polymarket.rs  polymarket_clob.rs  strategy_0x8dxd.rs  strategy_copy_trade.rs  strategy_copy_trade_ws.rs  strategy_gabagool.rs  types.rs
src/strategies/: mod.rs
tests/: integration_tests.rs  test_discovery.rs
