[package]
name = "prediction-market-arbitrage"
version = "2.1.0"
edition = "2021"
description = "Kalshi-Poly / Poly-Poly / Kalshi-Kalshi arbitrage bot - automated cross-platform prediction market trading system"
keywords = ["polymarket", "kalshi", "arbitrage", "trading-bot", "prediction-markets"]
authors = ["teraus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/terauss/prediction-market-arbitrage"
default-run = "bot"

[lib]
name = "prediction_market_arbitrage"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[[bin]]
name = "orderbook"
path = "src/bin/orderbook.rs"

[[bin]]
name = "tracker"
path = "src/bin/tracker.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Async & Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
clap = { version = "4.4", features = ["derive"] }
rustc-hash = "2.0"
governor = "0.6"
nonzero_ext = "0.3"
arrayvec = "0.7"
statrs = "0.16"
crossterm = "0.27"
regex = "1"
rust_decimal = "1.33"

# Web3 & Polymarket
alloy = { version = "1.4.3", default-features = false, features = [
    "dyn-abi",
    "reqwest",
    "reqwest-rustls-tls",
    "serde",
    "signer-local",
    "signers",
    "sol-types"
] }
polymarket-client-sdk = { git = "https://github.com/Polymarket/rs-clob-client", features = ["clob", "ws", "gamma", "rtds"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
